apps/goldilocks/httproute-goldilocks.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  annotations:
    external-dns.kubernetes.io/target: "${SECRET_GATEWAY}"
spec:
  parentRefs:
  - name: internal
    namespace: networking
  - name: external
    namespace: networking
  hostnames:
  - "goldilocks.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: goldilocks-dashboard
      port: 80
